--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -125,12 +125,12 @@ blockquote {
 /**
  * Code formatting
  */
-pre,
+pre, 
 code {
-    font-size: 15px;
-    border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
+  font-size: 14px;
+  border: 3px solid #dadada;
+  border-radius: 7px;
+  background-color: #f2f2f2;
 }
 
 code {
