Custopn text highlight color

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,16 @@ dl, dd, ol, ul, figure {
     padding: 0;
 }
 
+/**
+ * Override text highlight
+ */
+::selection {
+  background: #336699; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+  background: #336699; /* Gecko Browsers */
+}
+
 
 
 /**
