--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,9 +13,11 @@ dl, dd, ol, ul, figure {
  */
 ::selection {
   background: #336699; /* WebKit/Blink Browsers */
+  color: #fff;
 }
 ::-moz-selection {
   background: #336699; /* Gecko Browsers */
+  color: #fff;
 }
 
 
