--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,12 +12,12 @@ dl, dd, ol, ul, figure {
  * Override text highlight
  */
 ::selection {
-  background: #336699; /* WebKit/Blink Browsers */
-  color: #fff;
+  background: $select-bg-color; /* WebKit/Blink Browsers */
+  color: $select-text-color;
 }
 ::-moz-selection {
-  background: #336699; /* Gecko Browsers */
-  color: #fff;
+  background: $select-bg-color; /* Gecko Browsers */
+  color: $select-text-color;
 }
 
 
