--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,9 @@ $brand-color:      #336699;
 $pre-bg-color:      #f2f2f2;
 $pre-border-color:  #dadada;
 
+$select-bg-color:   #336699;
+$select-text-color: #e3e3e3;
+
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
