--- a/css/main.scss
+++ b/css/main.scss
@@ -20,8 +20,8 @@ $brand-color:      #336699;
 $pre-bg-color:      #f2f2f2;
 $pre-border-color:  #dadada;
 
-$select-bg-color:   #336699;
-$select-text-color: #e3e3e3;
+$select-bg-color:   #e7c22c;
+$select-text-color: #566471;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
