--- a/css/main.scss
+++ b/css/main.scss
@@ -20,7 +20,7 @@ $brand-color:      #336699;
 $pre-bg-color:      #f2f2f2;
 $pre-border-color:  #dadada;
 
-$select-bg-color:   #ececec;
+$select-bg-color:   #fafafa;
 $select-text-color: #566471;
 
 $grey-color:       #828282;
