--- a/css/main.scss
+++ b/css/main.scss
@@ -23,7 +23,7 @@ $pre-border-color:  #dadada;
 $select-bg-color:   lighten($grey-color, 60%);
 $select-text-color: #ebebeb;
 
-$grey-color:       $text-color;
+$grey-color:       #566471;
 $grey-color-light: lighten($grey-color, 60%);
 $grey-color-dark:  darken($grey-color, 25%);
 
