--- a/css/main.scss
+++ b/css/main.scss
@@ -20,7 +20,7 @@ $brand-color:      #336699;
 $pre-bg-color:      #f2f2f2;
 $pre-border-color:  #dadada;
 
-$select-bg-color:   lighten($grey-color, 60%);
+$select-bg-color:   lighten($text-color, 60%);
 $select-text-color: #ebebeb;
 
 $grey-color:       #566471;
