--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $brand-color;
+    border-top: 5px solid #000000;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
 
