--- a/css/main.scss
+++ b/css/main.scss
@@ -21,10 +21,10 @@ $pre-bg-color:      #f2f2f2;
 $pre-border-color:  #dadada;
 
 $select-bg-color:   #dadada;
-$select-text-color: #ebebeb;
+$select-text-color: #566471;
 
 $grey-color:       #566471;
-$grey-color-light: lighten($grey-color, 60%);
+$grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
