--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,7 +3,7 @@
  */
 .site-header {
     border-top: 5px solid #000000;
-    border-bottom: 1px solid $grey-color-light;
+    border-bottom: 1px solid $grid-color;
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
