--- a/css/main.scss
+++ b/css/main.scss
@@ -23,8 +23,10 @@ $pre-border-color:  #dadada;
 $select-bg-color:   #dadada;
 $select-text-color: #566471;
 
+$grid-color:        #e2e2e2;
+
 $grey-color:       #566471;
-$grey-color-light: lighten($grey-color, 40%);
+$grey-color-light: lighten($grey-color, 50%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
