Background color change

--- a/css/main.scss
+++ b/css/main.scss
@@ -14,10 +14,10 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #566471;
-$background-color: #ebebeb;
+$background-color: #fff;
 $brand-color:      #336699;
 
-$pre-bg-color:      #f2f2f2;
+$pre-bg-color:      #f6f6f6;
 $pre-border-color:  #dadada;
 
 $select-bg-color:   #dadada;
