--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,13 +54,13 @@
 
   <script>
     $(function() {
-      return $("h2, h3, h4, h5, h6").each(function(i, el) {
+      return $("h1, h2, h3, h4, h5, h6").each(function(i, el) {
         var $el, icon, id;
         $el = $(el);
         id = $el.attr('id');
         icon = '<i class="fa fa-link"></i>';
         if (id) {
-          return $el.prepend($("<a />").addClass("header-link").attr("href", "#" + id).html(icon));
+          return $el.append($("<a />").addClass("header-link").attr("href", "#" + id).html(icon));
         }
       });
     });
