--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -163,7 +163,7 @@
  */
 .page-content {
     padding: $spacing-unit 0;
-    text-align: justify;
+    /* text-align: justify; */
 }
 
 .page-heading {
