--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -28,6 +28,7 @@ dl, dd, ol, ul, figure {
 .header-link {
   margin-left: 6px;
   opacity: 0;
+  font-size: 70%;
 
   -webkit-transition: opacity 0.1s ease-in-out 0.1s;
   -moz-transition: opacity 0.1s ease-in-out 0.1s;
