--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,7 +58,7 @@
         var $el, icon, id;
         $el = $(el);
         id = $el.attr('id');
-        icon = '<i class="fa fa-paragraph"></i>';
+        icon = '<i class="fa fa-link"></i>';
         if (id) {
           return $el.append($("<a />").addClass("header-link").attr("href", "#" + id).html(icon));
         }
