--- a/css/main.scss
+++ b/css/main.scss
@@ -12,9 +12,9 @@ $base-line-height:  1.5;
 
 $spacing-unit:      30px;
 
-$text-color:        #566471;
+$text-color:        #7C848B;
 $background-color:  #fff;
-$brand-color:       #336699;
+$brand-color:       red;
 
 $pre-bg-color:      #f6f6f6;
 $pre-border-color:  #dadada;
