Link color changed

--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,7 @@ $spacing-unit:      30px;
 
 $text-color:        #7C848B;
 $background-color:  #fff;
-$brand-color:       red;
+$brand-color:       #00BBFF;
 
 $pre-bg-color:      #f6f6f6;
 $pre-border-color:  #dadada;
