--- a/css/main.scss
+++ b/css/main.scss
@@ -12,8 +12,8 @@ $base-line-height:  1.5;
 
 $spacing-unit:      30px;
 
-$text-color:        #7C848B;
-$background-color:  #fff;
+$text-color:        #566471;
+$background-color:  #E7E6E6;
 $brand-color:       #00BBFF;
 
 $pre-bg-color:      #f6f6f6;
