--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -56,11 +56,10 @@ body {
     font-weight: 400;
     color: $text-color;
     background-color: $background-color;
-    -webkit-text-size-adjust: 100%;
-    background-image: url({{ site.url }}/{{ asset-path }}/image.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center; 
+    background: -webkit-radial-gradient(50% 30%, farthest-side,white,#E7E6E6); /* Safari 5.1 to 6.0 */
+    background: -o-radial-gradient(50% 30%, farthest-side,white,#E7E6E6); /* For Opera 11.6 to 12.0 */
+    background: -moz-radial-gradient(50% 30%, farthest-side,white,#E7E6E6); /* For Firefox 3.6 to 15 */
+    background: radial-gradient(farthest-side at 50% 30%,white,#E7E6E6); /* Standard syntax (must be last) */
 }
 
 
