--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -146,12 +146,12 @@ a {
  * Blockquotes
  */
 blockquote {
-    color: $grey-color;
-    border-left: 4px solid $grey-color-light;
-    padding-left: $spacing-unit / 2;
-    font-size: 18px;
-    letter-spacing: -1px;
-    font-style: italic;
+      color: #566471;
+      font-size: 18px;
+      letter-spacing: -1px;
+      font-style: italic;
+      text-align: center;
+      margin: 30px 0px;
 
     > :last-child {
         margin-bottom: 0;
