Permalink text color added

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -30,6 +30,7 @@ dl, dd, ol, ul, figure {
   opacity: 0;
   font-size: 70%;
   text-decoration: none;
+  color: $text-color;
 }
 
 h1:hover .header-link,
