--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,8 @@
 
 
 // Our variables
-$base-font-family:  'Lato', sans-serif;
+//$base-font-family:  'Lato', sans-serif;
+$base-font-family: 'Open Sans', sans-serif;
 $base-font-size:    15px;
 $small-font-size:   $base-font-size * 0.875;
 $base-line-height:  1.5;
