Open sans font added

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,8 @@
 // Typography
 // --------------------------------------------------
 
-$base-font: 'Lato', Calibri, Arial, sans-serif;
+// $base-font: 'Lato', Calibri, Arial, sans-serif;
+// $base-font: 'Open Sans', sans-serif;
 $heading-font: $base-font;
 $caption-font: $base-font;
 $code-font: monospace;
