--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,7 +2,7 @@
 // --------------------------------------------------
 
 // $base-font: 'Lato', Calibri, Arial, sans-serif;
-// $base-font: 'Open Sans', sans-serif;
+$base-font: 'Open Sans', sans-serif;
 $heading-font: $base-font;
 $caption-font: $base-font;
 $code-font: monospace;
