--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -160,7 +160,7 @@ body {
 // --------------------------------------------------
 .entry-meta {
 	@include font-rem(12);
-	text-transform: uppercase;
+	/*text-transform: uppercase;*/
 	color: lighten($base-color,60);
 	a {
 		color: lighten($base-color,60);
@@ -174,6 +174,7 @@ body {
 		display: inline-block;
 		margin: 4px;
 		color: $white;
+		text-transform: uppercase;
 		@include rounded(3px);
 		background-color: lighten($base-color,50);
 		span {
