--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -5,12 +5,12 @@
     border: 1px solid darken($body-color, 5);
     background-color: #fdf6e3;
     @include rounded(6px);
-    pre {
+    /*pre {
         position: relative;
         margin: 0;
         padding: 1em;
         line-height: 1.2;
-    }
+    }*/
     .hhl { background-color: #fdf6e3;}
     .lineno { 
         color: #93a1a1; 
