--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -126,9 +126,9 @@
 
 // .border-radius(VALUE,VALUE,VALUE,VALUE);
 @mixin border-radius($topright: 0, $bottomright: 0, $bottomleft: 0, $topleft: 0) {
-  -webkit-border-top-right-radius : $topright $bottomright $bottomleft $topleft;
-  -moz-border-radius-topright : $topright $bottomright $bottomleft $topleft;
-  border-top-right-radius : $topright $bottomright $bottomleft $topleft;
+  -webkit-border-radius : $topright $bottomright $bottomleft $topleft;
+  -moz-border-radius : $topright $bottomright $bottomleft $topleft;
+  border-radius : $topright $bottomright $bottomleft $topleft;
   -webkit-background-clip : padding-box;
   -moz-background-clip : padding;  
   background-clip : padding-box; 
