--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -11,12 +11,7 @@
         padding: 1em;
     }
     .hhl { background-color: #fdf6e3;}
-    .lineno { 
-        color: #93a1a1; 
-        padding-right: 15px;
-        border-right: 1px solid;
-        margin-right: 4px;
-     } /* Line Numbers */
+    .lineno { color: #93a1a1 } /* Line Numbers */
     .c { color: #93a1a1 } /* Comment */
     .err { color: #586e75 } /* Error */
     .g { color: #586e75 } /* Generic */
