--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -1,7 +1,7 @@
 table.highlighttable {
   border-collapse: collapse;
 }
-table.highlighttable td {
+table.highlighttable tr td {
   padding: 0;
 }
 
