--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -12,21 +12,16 @@ table.highlighttable tr td {
   margin-bottom: 15px;
   background: #ddd;
   padding-right: 3px;
-  pre {
-      position: relative;
-      margin: 0;
-      padding: 1em;
-  }
 }
 .highlight {
     @include font(12);
     color: #586e75;
     background-color: #fdf6e3;
-    pre {
+    /*pre {
         position: relative;
         margin: 0;
         padding: 1em;
-    }
+    }*/
     .hhl { background-color: #fdf6e3;}
     .lineno { color: #93a1a1 } /* Line Numbers */
     .c { color: #93a1a1 } /* Comment */
