--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -1,6 +1,7 @@
 table.highlighttable {
-  border-collapse: collapse;
-  @include border-radius(0, 6px, 6px, 0);
+  border-collapse: separate;
+  border-spacing: 0;
+  @include rounded(6px);
   border: 1px solid darken($body-color, 5);
 }
 table.highlighttable tr td {
