--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -1,11 +1,11 @@
 table.highlighttable {
   border-collapse: separate;
   border-spacing: 0;
-}
-table.highlighttable, td {
-  padding: 0;
   @include rounded(6px);
   border: 1px solid darken($body-color, 5);
+}
+table.highlighttable td {
+  padding: 0;
 }
 
 .linenodiv {
