--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -115,6 +115,7 @@ pre {
     @include font-rem(12);
     line-height: 1.2;
     overflow-x: auto;
+    padding: 7px 0;
     &::-webkit-scrollbar {
         height: 12px;
         background-color: #34362e;
