--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -3,6 +3,7 @@ body {
     padding: 0;
     width: 100%;
     background-color: $body-color;
+    background-image: url(images/cartographer.png);
 }
 
 // Main
