--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -32,6 +32,7 @@ body {
     width: 100%;
     overflow: hidden;
     position: relative;
+    box-shadow: 0 2px 6px #E7E7E7;
 }
 .header-title {
     text-align: center;
@@ -366,7 +367,7 @@ header .entry-meta {
         }
     }
     article {
-        background-color: $white;
+        background-color: rgba(255, 255, 255, 0.9);
         box-shadow: 0 0 0 0, 0 7px 24px rgba($base-color,0.6);
         @include rounded(3px);
         margin-bottom: 20px;
