--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -119,10 +119,10 @@ pre {
     &::-webkit-scrollbar {
         height: 12px;
         background-color: #34362e;
-        border-radius: 0 0 4px 4px;
+        border-radius: 0 0 6px 46x;
     }
     &::-webkit-scrollbar-thumb:horizontal {
         background-color: #6a6d5d;
-        @include rounded(4px);
+        @include rounded(6px);
     }
 }
