--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -2,7 +2,7 @@ table.highlighttable {
   border-collapse: separate;
   border-spacing: 0;
   @include rounded(6px);
-  @include box-shadow(0 3px 8px #eee)
+  @include box-shadow(0 3px 8px #eee);
 }
 table.highlighttable td {
   padding: 0;
@@ -18,7 +18,7 @@ table.highlighttable td {
     color: #586e75;
     background-color: #fdf6e3;
     @include rounded(6px);
-    @include box-shadow(0 3px 8px #eee)
+    @include box-shadow(0 3px 8px #eee);
     pre {
         padding-left: 6px;
     }
