--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -4,6 +4,7 @@ table.highlighttable {
   @include rounded(6px);
   @include box-shadow(0 3px 8px rgba(0, 0, 0, 0.13));
   overflow: hidden;
+  margin-bottom: 25px;
 }
 table.highlighttable td {
   padding: 0;
