--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -2,9 +2,10 @@ table.highlighttable {
   border-collapse: separate;
   border-spacing: 0;
   @include rounded(6px);
-  @include box-shadow(0 2px 5px rgba(0, 0, 0, 0.15));
+  @include box-shadow(0 2px 5px rgba(0, 0, 0, 0.09));
   overflow: hidden;
   margin-bottom: 25px;
+  border: 1px solid rgba(147, 161, 161, 0.55);
 }
 table.highlighttable td {
   padding: 0;
