--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -32,7 +32,7 @@ body {
     width: 100%;
     overflow: hidden;
     position: relative;
-    box-shadow: 0 2px 6px #E7E7E7;
+    box-shadow: 0 2px 3px rgba(255, 255, 255, 0.87);
 }
 .header-title {
     text-align: center;
