--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,6 +1,3 @@
----
----
-
 body {
     margin: 0;
     padding: 0;
@@ -40,7 +37,7 @@ body {
 .header-title {
     text-align: center;
     margin: 30px 0 0;
-      background-image: url('{{ site.baseurl }}/images/transparent-grain.png');
+      background-image: url('/images/transparent-grain.png');
     h1 {
         margin: 10px 20px;
         font-weight: 700;
