--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -387,7 +387,7 @@ header .entry-meta {
     margin-left: -15px;
     margin-right: -15px;
     margin-bottom: 10px;
-    background-image: url('/images/transparent-grain.png');`
+    background-image: url('/images/transparent-grain.png');
     @media #{$medium} {
         margin-top: -30px;
         margin-left: -30px;
