--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -126,9 +126,18 @@
 
 // .border-radius(VALUE,VALUE,VALUE,VALUE);
 @mixin border-radius($topright: 0, $bottomright: 0, $bottomleft: 0, $topleft: 0) {
-  -webkit-border-radius : $topright $bottomright $bottomleft $topleft;
-  -moz-border-radius : $topright $bottomright $bottomleft $topleft;
-  border-radius : $topright $bottomright $bottomleft $topleft;
+  -webkit-border-top-right-radius : $topright;
+  -webkit-border-bottom-right-radius : $bottomright;
+  -webkit-border-bottom-left-radius : $bottomleft;
+  -webkit-border-top-left-radius : $topleft;
+  -moz-border-radius-topright : $topright;
+  -moz-border-radius-bottomright : $bottomright;
+  -moz-border-radius-bottomleft : $bottomleft;
+  -moz-border-radius-topleft : $topleft;
+  border-top-right-radius : $topright;
+  border-bottom-right-radius : $bottomright;
+  border-bottom-left-radius : $bottomleft;
+  border-top-left-radius : $topleft;
   -webkit-background-clip : padding-box;
   -moz-background-clip : padding;  
   background-clip : padding-box; 
