--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -23,14 +23,14 @@ a {
     text-decoration: none;
     color: $link-color; 
     &:visited { 
-        color: lighten($link-color, 10); 
+        /* color: lighten($link-color, 10); */
     }
     &:hover { 
-        color: darken($link-color, 20); 
+        /* color: darken($link-color, 20); */
     }
     &:focus { 
         outline: thin dotted; 
-        color: darken($link-color, 20);
+        /* color: darken($link-color, 20);*/
     }
     &:hover, 
     &:active { 
