--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,7 +28,7 @@ $comp-color 	 		   : complement(#222);
 $border-color    		 : lighten($base-color,60);
 $white           		 : #fff;
 $black           		 : #000;
-$link-color 		     : rgba(#222,0.7);
+$link-color 		     : #7393d3;
 
 $primary			       : #222;
 $success			       : #5cb85c;
