--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -26,7 +26,7 @@ a {
         /* color: lighten($link-color, 10); */
     }
     &:hover { 
-        /* color: darken($link-color, 20); */
+        color: lighten($link-color, 10);
     }
     &:focus { 
         outline: thin dotted; 
