--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -15,7 +15,7 @@ body {
     }
 }
 .entry-content {
-    @include font-size(16);
+    font-size: 16px;
     // Dotted line underlines for links
     p > a,
     li > a {
