--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -16,6 +16,7 @@ body {
 }
 .entry-content {
     font-size: 16px;
+    text-align: justify;
     // Dotted line underlines for links
     p > a,
     li > a {
