header lighter glow removed..

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -33,7 +33,7 @@ body {
     width: 100%;
     overflow: hidden;
     position: relative;
-    box-shadow: 0 1px 4px rgba(255, 255, 255, 0.66);
+    /* box-shadow: 0 1px 4px rgba(255, 255, 255, 0.66); */
 }
 .header-title {
     text-align: center;
