--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -29,11 +29,15 @@ body {
 
 // Entry Header
 // --------------------------------------------------
+
+.feature .entry-header {
+    box-shadow: 0 1px 4px rgba(255, 255, 255, 0.66);
+}
+
 .entry-header {
     width: 100%;
     overflow: hidden;
     position: relative;
-    /* box-shadow: 0 1px 4px rgba(255, 255, 255, 0.66); */
 }
 .header-title {
     text-align: center;
