--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,40 +1,39 @@
 // Typography
 // --------------------------------------------------
 
-// $base-font: 'Lato', Calibri, Arial, sans-serif;
-$base-font: 'Open Sans', sans-serif;
-$heading-font: $base-font;
-$caption-font: $base-font;
-$code-font: monospace;
-$alt-font: serif;
+$base-font           : 'Lato', Calibri, Arial, sans-serif;
+$heading-font        : $base-font;
+$caption-font        : $base-font;
+$code-font           : monospace;
+$alt-font            : serif;
 
-$doc-font-size: 16;
-$doc-line-height: 26;
+$doc-font-size       : 16;
+$doc-line-height     : 26;
 
 
 // set-up the body font-size / line-height
 body {
-	margin-top: 0px + $doc-line-height;
-	font-size: 0px + $doc-font-size;	
+    margin-top       : 0px + $doc-line-height;
+    font-size        : 0px + $doc-font-size;    
 }
 
 
 // Colors
 // --------------------------------------------------
-$base-color				   : rgba(#222,0.6);
-$body-color      		 : #e8e8e8;
-$text-color      		 : rgba(#222,0.7);
-$comp-color 	 		   : complement(#222); 
-$border-color    		 : lighten($base-color,60);
-$white           		 : #fff;
-$black           		 : #000;
-$link-color 		     : rgba(#222,0.6);
+$base-color          : rgba(#222,0.8);
+$body-color          : #e8e8e8;
+$text-color          : rgba(#222,0.8);
+$comp-color          : complement(#222); 
+$border-color        : lighten($base-color,60);
+$white               : #fff;
+$black               : #000;
+$link-color          : rgba(#222,0.8);
 
-$primary			       : #222;
-$success			       : #5cb85c;
-$warning			       : #dd8338;
-$danger				       : #C64537;
-$info				       : #308cbc;
+$primary             : #222;
+$success             : #5cb85c;
+$warning             : #dd8338;
+$danger              : #C64537;
+$info                : #308cbc;
 
 
 // Screen Size
@@ -48,4 +47,4 @@ $large               : "only screen and (min-width: 62.5em)";
 // Page Sizes
 // --------------------------------------------------
 
-$header-height       : 340px;
+$header-height       : 400px;
