gist important hack

--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -40,11 +40,11 @@
 }
 
 .gist-meta {
-  padding: 5px 40px;
-  background-color: transparent;
-  color: #9da1a1;
+  padding: 5px 40px !important;
+  background-color: transparent !important;
+  color: #9da1a1 !important;
   a {
-    color: #9da1a1;
+    color: #9da1a1 !important;
   }
 }
 
