gist final strockes

--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -51,7 +51,7 @@
   background-color: transparent !important;
   color: #9da1a1 !important;
   a {
-    color: #9da1a1 !important;
+    color: #795da3 !important;
   }
 }
 
