--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -49,9 +49,9 @@
 .gist-meta {
   padding: 5px 40px !important;
   background-color: transparent !important;
-  color: #9da1a1 !important;
+  color: #969896 !important;
   a {
-    color: #795da3 !important;
+    color: #9da1a1 !important;
   }
 }
 
