--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -49,10 +49,9 @@
 .gist-meta {
   padding: 5px 40px !important;
   background-color: transparent !important;
-  color: #969896 !important;
+  color: rgba(187,187,187,0.8); !important;
   a {
-    color: #9da1a1 !important;
-    border-bottom: dotted 1px #969896;
+    color: rgba(187,187,187,0.8); !important;
   }
 }
 
